--- a/wasm-stdlib/index.html
+++ b/wasm-stdlib/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>hello-wasm example</title>
-  </head>
-  <body>
-    <script>let dummy = {};</script>
-    <script type="module">
-      import init, {do_something} from "./pkg/wasm_stdlib.js";
-      dummy["do_something"] = do_something;
-      init();
-    </script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>hello-wasm example</title>
+</head>
+
+<body>
+  <script>let dummy = {};</script>
+  <script type="module">
+    import init, { do_something, do_something_with_websys } from "./pkg/wasm_stdlib.js";
+    dummy["do_something"] = do_something;
+    dummy["do_something_with_websys"] = do_something_with_websys;
+    init();
+  </script>
+</body>
+
 </html>
